# veter

./: .gitignore  README.md
apps/: README.md
apps/veter_app/: README.md  pubspec.yaml
apps/veter_app/android/app/: build.gradle.kts
apps/veter_app/android/app/src/main/: AndroidManifest.xml
apps/veter_app/android/app/src/main/kotlin/com/veter/veter_app/: MainActivity.kt
apps/veter_app/ios/Runner/: Info.plist
apps/veter_app/ios/Runner.xcodeproj/: project.pbxproj
apps/veter_app/lib/: main.dart
apps/veter_app/lib/models/: message.dart
apps/veter_app/lib/services/: crypto_service.dart  network_service.dart  storage_service.dart
apps/veter_app/linux/: CMakeLists.txt
apps/veter_app/linux/runner/: my_application.cc
apps/veter_app/macos/Runner.xcodeproj/: project.pbxproj
apps/veter_app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
apps/veter_app/macos/Runner/Configs/: AppInfo.xcconfig
apps/veter_app/test/: widget_test.dart
apps/veter_app/web/: index.html  manifest.json
apps/veter_app/windows/: CMakeLists.txt
apps/veter_app/windows/runner/: Runner.rc  main.cpp
core/veter_core/: Cargo.toml
core/veter_core/src/: crypto.rs  error.rs  lib.rs  models.rs  networking.rs  storage.rs
docs/: TECH-PLAN.md
proto/: relay.proto
scripts/: bootstrap.sh
