[package]
name = "veter_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
# Core error handling
anyhow = "1"
thiserror = "1"

# Cryptography
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
x25519-dalek = "2.0"
ed25519-dalek = "2.0"
rand = "0.8"
sha2 = "0.10"
hmac = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

# Networking
tonic = "0.11"
quinn = "0.11"
prost = "0.12"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
hex = "0.4"

